fixing style on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@
     --dark-background: #08112f;
 }
 
-
+ .container-xxl, .container,.container-fluid  {
+    overflow-x: hidden;
+}
 
 p{
     color: var(--light)
